[package]
name = "ovr_overlay_sys"
version = "0.0.0"
description = "Rust low-level bindings for OpenVR overlays"
edition = "2021"
authors = ["Ryan Butler <thebutlah@gmail.com>"]
license = "MIT OR Apache-2.0"
rust-version = "1.58"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
autocxx = "0.21"
cxx = "1"

[build-dependencies]
autocxx-build = "0.21"
normpath = "0.3"
